--- a/ARDicee/ARDicee/Base.lproj/Main.storyboard
+++ b/ARDicee/ARDicee/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--ARDicee-->
         <scene sceneID="tXr-a1-R10">
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="ARDicee" customModuleProvider="target" sceneMemberID="viewController">
@@ -30,7 +30,12 @@
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="6qM-LA-2er">
+                    <navigationItem key="navigationItem" title="ARDicee" id="6qM-LA-2er">
+                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="nEL-ef-ci2">
+                            <connections>
+                                <action selector="removeAllDice:" destination="BV1-FR-VrT" id="S2D-Kg-4Pl"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="bbp-V4-IOJ">
                             <connections>
                                 <action selector="rollAgain:" destination="BV1-FR-VrT" id="V33-CI-Msw"/>
